Splash (#22)
* Moved screenshots outside of project and installed Bootstrap and installed routing to show site pages

* Moved mockups outside of project.(Missed)

* Add base for Header component

* Add Logo to the header-component

* Add Links from react-router-dom to allow navigation from the header

* Initial create account components and custom form elemennts created with universal styling for inputs

* Removed Markus header component from this branch

* Updated Input Components with proper spacing as well as all H tags.

* Updated Form inputs for self validation

* adding request validations

* Added distance api to calculate distance between zip codes

* Updated Create Account Email Input Placeholder and validation styling

* Revising Input Components for self validation

* Fixed username self-validation WIP

* Added Google Places AutoComplete for Location Input Field

* Updates to create account form

* added type check in distanceService

* Set colors for default navlinks and active navlinks

* moved testing dependencies into devDependencies for build efficiency

* Update swagger.yaml

* Finalized Create account page and validation. Styled for mobile.

* Fixed mobile styling

* Saved Package.json file

* added logic in front end for security properties, updated api to handle security properties

* made csrf secret dynamic again

* The start of creating the login homepage

* Finished home login page. Will reroute homepage to this page upon launch and will replace splashscreen

* Add header to app.js and adjust styling

* Added forgot password page and fixed some minor form input validation. Ongoing issue WIP

* Missed a styling issue on home login component

* Adjusted components with new route paths for home and removed splash screen from route links

* Removed font import from header file. It's imported across the entire app already

* added create account api

* fixes to  createaccount endpoi
