# api/middlewares.ts
@@ -2,7 +2,8 @@
 import { Request, Response, NextFunction } from 'express';
 import { constants } from './constants/constants';
 import { basename } from 'path';
-import { grubberLogger } from './logger'
+import { grubberLogger } from './logger';
+import { AES, enc } from 'crypto-js';
 
 const filename = basename(__filename);
 
@@ -17,6 +18,22 @@ const buildErrorResponse = (res: Response, code: number, errorCode: string, erro
     });
 };
 
+const validateSecToken = (req: Request, res: Response, next: NextFunction) => {
+    try {
+        const header = req.headers['grubber-sec-token'];
+        const decrypted = AES.decrypt(header as string, 'Si je veux bien').toString(enc.Utf8);
+        const token = JSON.parse(decrypted);
+        if (token.msg > new Date().toUTCString()) {
+            next();
+        } else {
+            throw new Error('Expired sec token');
+        }
+    } catch (err) {
+        grubberLogger.error('Error validating security token ', { filename, obj: err });
+        buildErrorResponse(res, 403, 'Forbidden');
+    }
+}
+
 export const setApiTimeout = (_req: Request, res: Response, next: NextFunction) => {
     const timeout = constants.API_TIMEOUT;
     res.setTimeout(timeout, () => buildErrorResponse(res, 503, 'request_timeout'));
@@ -28,7 +45,7 @@ export const addHeaders = (_req: Request, res: Response, next: NextFunction) => 
 
     // TODO: CORS
     res.header('Access-Control-Allow-Origin', '*');
-    res.header('Access-Control-Allow-Headers', 'Content-Type, Accept, CSRF-TOKEN')
+    res.header('Access-Control-Allow-Headers', 'Content-Type, Accept, CSRF-TOKEN, GRUBBER-SEC-TOKEN');
     res.header('Access-Control-Expose-Headers', 'CSRF-TOKEN');
     res.header('CSRF-TOKEN', csrfToken);
     next();
@@ -43,6 +60,18 @@ export const checkIp = (req: Request, res: Response, next: NextFunction) => {
     }
 };
 
+export const validateCsrf = (req: Request, res: Response, next: NextFunction) => {
+    if (req.headers['csrf-token']) {
+        if (tokens.verify(secret, req.headers['csrf-token'])) {
+            validateSecToken(req, res, next);
+        } else {
+            buildErrorResponse(res, 403, 'forbidden');
+        }
+    } else {
+        buildErrorResponse(res, 403, 'forbidden');
+    }
+}
+
 export const logRequest = (req: Request, _res: Response, next: NextFunction) => {
     const reqObj = {
         method: req.method,
@@ -54,4 +83,36 @@ export const logRequest = (req: Request, _res: Response, next: NextFunction) => 
     };
     grubberLogger.access('Request received: ', { filename, obj: JSON.stringify(reqObj) });
     next();
+};
+
+export const requestValidator = (req: Request, reqBody: string[], reqHeader?: string[]) => {
+
+    const missing = [];
+    
+    if (reqBody) {
+        reqBody.forEach(prop => {
+            if (!req.body.hasOwnProperty(prop)) {
+                missing.push(prop);
+            }
+        });
+    }
+    if (reqHeader) {
+        reqHeader.forEach(prop => {
+            if (!req.headers.hasOwnProperty(prop)) {
+                missing.push(prop);
+            }
+        });
+    }
+
+    if (missing.length > 0) {
+        throw {
+            status: 400,
+            error: {
+                error: 'missing_params',
+                error_message: 'request is missing required params: ' + missing.toString
+            }
+        }
+    }
+
+    return true;
 };
